# mongocxx-bazel

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  mongoc.BUILD.bazel  mongocxx.BUILD.bazel  tutorial.cpp
.github/workflows/: main.yml
