module(name = "mongocxx_bazel")

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "mongocxx",
    build_file = "mongocxx.BUILD.bazel",
    integrity = "sha256-ApfZ0aUT8JQ4zAUlSxS6pJ7dH6ZKbOXXqAoet2d88r4=",
    strip_prefix = "mongo-cxx-driver-r3.10.1",
    url = "https://github.com/mongodb/mongo-cxx-driver/releases/download/r3.10.1/mongo-cxx-driver-r3.10.1.tar.gz",
)

http_archive(
    name = "mongoc",
    build_file = "mongoc.BUILD.bazel",
    integrity = "sha256-CrPFsjiAO4KmshfR7yHqcabpYlEGMyLcEDi+pwo9pUE=",
    strip_prefix = "mongo-c-driver-1.25.4",
    url = "https://github.com/mongodb/mongo-c-driver/archive/refs/tags/1.25.4.tar.gz",
)
